--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ colorama==0.4.3
 covid19-estimator-py==0.0.0
 dicttoxml==1.7.4
 fastapi==0.54.1
+gunicorn==20.0.4
 h11==0.9.0
 idna==2.9
 isort==4.3.21
