--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
 colorama==0.4.3
-covid19-estimator-py==0.0.0
+# covid19-estimator-py==0.0.0
 dicttoxml==1.7.4
 fastapi==0.54.1
 gunicorn==20.0.4
