--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,30 @@
 astroid==2.3.3
+attrs==19.3.0
 autopep8==1.5.1
 certifi==2020.4.5.1
 chardet==3.0.4
 click==7.1.1
 colorama==0.4.3
-# covid19-estimator-py==0.0.0
+covid19-estimator-py==0.0.0
 dicttoxml==1.7.4
 fastapi==0.54.1
 gunicorn==20.0.4
 h11==0.9.0
 idna==2.9
+importlib-metadata==1.6.0
 isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.11.1
+jsonschema==3.2.0
 lazy-object-proxy==1.4.3
 MarkupSafe==1.1.1
 mccabe==0.6.1
 pycodestyle==2.5.0
 pydantic==1.4
 pylint==2.4.4
+pyrsistent==0.16.0
 requests==2.23.0
+simplejson==3.17.0
 six==1.11.0
 starlette==0.13.2
 typed-ast==1.4.1
@@ -29,3 +34,4 @@ websockets==8.1
 Werkzeug==1.0.1
 wrapt==1.11.2
 xmltodict==0.11.0
+zipp==3.1.0
