--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
       "<rootDir>/audits/test_utils.py"
     ],
     "testMatch": [
-      "<rootDir>/audits/**/test_*.py"
+      "<rootDir>/audits/**/test_*.py",
+      "<rootDir>/src/test_*.py",
+      "<rootDir>/src/**/test_*.py"
     ]
   },
   "dependencies": {
